recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: object Nil does not take type parameters.
		return l.head :: Nil[Int]
                                    ^